# sushi_digital_human

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CODING_STANDARDS.md  DEPLOYMENT.md  Dockerfile  MONITORING_README.md  README.md  TESTS_README.md  agent.md  alembic.ini  alertmanager.yml  bandit.yaml  chat-ready.yml  ci_logs_26006519361.txt  ci_logs_26007760706.txt  docker-compose.dev.yml  docker-compose.monitor.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  dump.rdb  install_deps.bat  package-lock.json  prometheus.yml  pyproject.toml  requirements.txt  test_document.txt  view_logs.bat
.codebuddy/memory/: 2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  MEMORY.md
.github/scripts/: ci_auto_fix.py
.github/workflows/: auto-fix.yml.disabled  ci-cd.yml  frontend-ci.yml
.playwright-cli/: page-2026-05-22T08-01-50-374Z.yml  page-2026-05-22T08-02-12-305Z.yml  page-2026-05-22T08-02-54-869Z.yml  page-2026-05-22T08-03-19-679Z.yml  page-2026-05-22T08-03-53-393Z.yml  page-2026-05-22T08-04-07-954Z.yml  page-2026-05-22T08-04-26-528Z.yml  page-2026-05-22T08-04-38-177Z.yml  page-2026-05-22T09-49-40-711Z.yml  page-2026-05-22T09-50-39-679Z.yml  page-2026-05-22T09-51-09-130Z.yml  page-2026-05-22T09-51-42-927Z.yml  page-2026-05-22T09-51-58-515Z.yml  page-2026-05-22T09-56-58-902Z.yml  page-2026-05-22T09-57-12-181Z.yml  page-2026-05-22T09-57-32-739Z.yml  page-2026-05-22T09-57-40-482Z.yml  page-2026-05-22T09-57-57-151Z.yml
.trae/: agent_config.json  commands.json  knowledge_base.json
.trae/commands/: 代码规范检查.md  启动后端服务.md  本地ci检查.md  自动修复代码.md  运行单元测试.md
.trae/skills/: __init__.py  code_review.yaml
.trae/workflows/: development_workflow.yaml
backend/: __init__.py  main.py
backend/agent/: __init__.py
backend/agents/: __init__.py  messaging.py  parallel_engine.py  role_manager.py  task_splitter.py
backend/analytics/: stats_collector.py
backend/api/: __init__.py  ab_test.py  agent.py  agents.py  alerts.py  audit.py  auth.py  chart.py  chat.py  cicd.py  debug.py  deployment.py  dify.py  document.py  documents.py  knowledge_graph.py  multimodal.py  notification.py  permission.py  plugins.py  summary.py  tracing.py  versioning.py  websocket.py  workflow.py
backend/api_market/: __init__.py
backend/audit/: audit_logger.py
backend/auth/: mfa.py  permission_manager.py
backend/chain/: __init__.py  multimodal_chain.py  rag_cache.py  rag_chain.py  summary_chain.py
backend/cicd/: __init__.py  boundary_tester.py  hallucination_detector.py  test_report.py
backend/core/: ab_test.py  auth_manager.py  config.py  dify.py  permission_manager.py  security.py  sms_service.py
backend/data_loader/: __init__.py  chart_parser.py  chunker.py  loader.py  manager.py  office_parser.py  pdf_processor.py
backend/database/: models.py  pool.py  session.py
backend/debug/: __init__.py  breakpoints.py  debugger.py  prompt_debugger.py  state_visualizer.py
backend/deployment/: __init__.py  ab_test.py  traffic_controller.py  version_manager.py
backend/generator/: __init__.py  llm.py  llm_fault_tolerance.py
backend/integrations/: __init__.py
backend/knowledge_graph/: __init__.py  graph_query.py  graph_storage.py  ner_extractor.py  relation_extractor.py
backend/memory/: __init__.py  cache.py  conversation.py  multi_level_cache.py  redis_client.py
backend/middleware/: permission.py  security.py
backend/models/: __init__.py  database.py  exceptions.py  schemas.py
backend/monitoring/: __init__.py  alert_manager.py  error_tracker.py  metrics_collector.py  notification_gateway.py  (+3 more)
config/: redis.conf
docs/: 100USERS_STRESS_TEST_REPORT.md  2026-05-15_PROGRESS.md  2026-05-16_PROGRESS.md  ARCHITECTURE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  FINAL_SUMMARY.md  HTTPS_SETUP.md  LEGAL_AGENT_PLAN.md  LEGAL_AGENT_QUICKSTART.md  PERFORMANCE_TEST_REPORT.md  PERFORMANCE_TEST_REPORT_AFTER_OPTIMIZATION.md  PROGRESS.md  PROJECT_SUMMARY.md  TECH_STACK.md  requirements_v2.0.md  requirements_v3.0.md
frontend/: .eslintrc.js  .eslintrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  test_github.html  vite.config.ts
helm/: Chart.yaml  README.md  values.yaml
migrations/: env.py
monitoring/: prometheus.yml
scripts/: README.md  add_phone_column.py  auto_fix.py  backup_mysql.bat  docker_certbot.bat  generate_self_signed_cert.bat  get_ssl_cert.bat  github_ci_check.py  github_ci_helper.py  local_ci_check.ps1  local_ci_check.py  make_email_nullable.py  renew_letsencrypt_cert.bat
templates/: fastapi_router.py  python_base.py  vue_component.vue
tests/: BaseURL.py  add_docs.py  add_test_docs.py  performance_test.py  quick_health_check.py  quick_perf_test.py  stress_test_100.py  stress_test_10k.py  test_agent.py  test_api.py  test_api_complete.py  test_async_api.py  test_async_simple.py  test_async_vs_sync.py  test_data_loader.py  test_docker_compose.py  test_embedding_models.py  test_frontend_async.py  test_full_api.py  test_hybrid_retriever.py  test_llm.py  test_memory.py  test_quick_async.py  test_rag_chain.py  test_rag_with_docs.py  test_redis_memory.py  test_simple_async.py  test_streaming_api.py  test_system_integration.py  test_typewriter.py  test_vector_store.py  verify_api.py
(+151 files in other folders)
