[project]
name = "sushi-digital-human"
version = "0.1.0"
description = "苏轼文化数字人问答系统 - 基于 RAG 的文化知识库"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}

dependencies = [
    # AI & LLM 框架
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",

    # DashScope 通义千问
    "dashscope>=1.14.0",

    # 向量数据库
    "chromadb>=0.5.0",

    # BM25 检索
    "rank-bm25>=0.2.0",

    # 重排序模型
    "sentence-transformers>=2.2.0",

    # Redis（缓存、记忆、限流、Celery）
    "redis>=5.0.0",

    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # 数据验证与配置
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # 环境变量
    "python-dotenv>=1.0.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",

    # 异步任务队列
    "celery>=5.3.0",

    # 日志
    "loguru>=0.7.0",

    # HTTP 客户端
    "httpx>=0.27.0",

    # OpenAI 兼容接口
    "openai>=1.36.0",

    # 密码哈希
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",

    # 文档处理
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",

    # 文本处理
    "jieba>=0.42.0",

    # 监控
    "prometheus-client>=0.19.0",

    # 测试
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sushi-digital-human"
Documentation = "https://github.com/yourusername/sushi-digital-human/docs"
Repository = "https://github.com/yourusername/sushi-digital-human"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
    "/backend",
    "/tests",
    "/docs",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
