[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-document-qa"
version = "1.0.0"
description = "企业级智能文档问答平台 - 基于 RAG 的企业知识库问答系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "dashscope>=1.14.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "requests>=2.30.0",
    "loguru>=0.7.0",
    "jieba>=0.42.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.49",
    "aiomysql>=0.2.0",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "cachetools>=5.3.0",
    "pybreaker>=1.0.0",
    "psutil>=7.2.2",
    "pytest-playwright>=0.8.0",
    "playwright>=1.60.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "email-validator>=2.3.0",
    "argon2-cffi>=25.1.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=26.5.0",
    "pre-commit>=4.6.0",
    "bandit>=1.7.9",  # 安全扫描
    "locust>=2.31.0",  # 性能测试
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]
exclude = ["__pycache__", ".git", "*.pyc", "*.egg-info", "frontend/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
strict = false
exclude = ["tests/*", "frontend/*"]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/__init__.py", "backend/*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 40  # 原有 36% + 6 个新测试模块，保守设 40
